# pybiodynamics

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: logistic_growth.ipynb  lotka_volterra.ipynb
pybiodynamics/: __init__.py
pybiodynamics/core/: __init__.py  models.py  reactions.py
pybiodynamics/simulation/: __init__.py  gillespie.py  ode.py
pybiodynamics/visualization/: __init__.py  plotting.py
tests/: test_core_models.py  test_reactions.py  test_simulation.py
