[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pybiodynamics"
version = "0.0.1"
description = "A Python library for modeling and simulating biological dynamic systems"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "PyBiodynamics Team", email = "contact@pybiodynamics.org"},
]
maintainers = [
    {name = "PyBiodynamics Team", email = "contact@pybiodynamics.org"},
]
keywords = [
    "biology", 
    "simulation", 
    "systems-biology", 
    "gillespie", 
    "ode", 
    "kinetics",
    "biochemistry",
    "bioinformatics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "sympy>=1.8.0",
    "matplotlib>=3.3.0",
    "pandas>=1.3.0",
    "networkx>=2.6.0",
    "numba>=0.54.0",
    "tabulate>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "pre-commit",
]
jupyter = [
    "jupyter",
    "ipython",
    "notebook",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
]
all = [
    "pybiodynamics[dev,jupyter,docs]",
]

[project.urls]
Homepage = "https://github.com/pybiodynamics/pybiodynamics"
Documentation = "https://pybiodynamics.readthedocs.io/"
Repository = "https://github.com/pybiodynamics/pybiodynamics.git"
"Bug Tracker" = "https://github.com/pybiodynamics/pybiodynamics/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pybiodynamics*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
pybiodynamics = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
